fixed markdown reference overflow

--- a/app/app.css
+++ b/app/app.css
@@ -916,6 +916,12 @@ input[type="file"].input-required~.input-error {
 
 /* Table ***********************************************************************/
 
+table {
+  width: 100%;
+  overflow-x: auto;
+  display: block;
+}
+
 table, th, td {
   border: 1px solid var(--color-gray-light);
   padding: calc(var(--spacing) * 2);
